Работа с сессиями. Вывод пользователю сообщения о количестве посещении им главной страницы сайта

--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -20,4 +20,5 @@
         <li><strong>Task2:</strong> {{ num_genre_task }}</li>
     </ul>
 
+    <p>You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{% else %} times{% endif %}.</p>
 {% endblock %}
