--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -34,6 +34,7 @@
                         <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
                     {% else %}
                         <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
+                        <li><a href="?next={{ request.path }}"> Registration </a></li>
                     {% endif %}
                 </ul>
 
