--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -1,28 +1,36 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1> Author-detail page </h1>
+    <h1> Author-detail page </h1>
 
-  <p><strong>Author:</strong> {{ author.last_name }}, {{ author.first_name }}</p>
-  <p><strong>Date of birth:</strong> {{ author.date_of_birth }}</p>
-  <p><strong>Date of death:</strong>
-      {% if author.date_of_death %}
-      {{ author.date_of_death }}
-       {% else %}
-        -
+    <p><strong>Author:</strong> {{ author.last_name }}, {{ author.first_name }}</p>
+    <p><strong>Date of birth:</strong> {{ author.date_of_birth }}</p>
+    <p><strong>Date of death:</strong>
+        {% if author.date_of_death %}
+            {{ author.date_of_death }}
+        {% else %}
+            -
         {% endif %}
-  </p>
-
-
-  <div style="margin-left:20px;margin-top:20px">
-    <h4>Author's books:</h4>
-
-    {% for book in author.book_set.all %}
-    <p>
-        <a href="{% url 'book-detail' book.pk %}"> {{ book.title }}</a> <br>
-        <span>{{ book.summary }}</span>
     </p>
-    {% endfor %}
 
-  </div>
+
+    <div style="margin-left:20px;margin-top:20px">
+        <h4>Author's books:</h4>
+
+        {% for book in author.book_set.all %}
+            <p>
+                <a href="{% url 'book-detail' book.pk %}"> {{ book.title }}</a> <br>
+                <span>{{ book.summary }}</span>
+            </p>
+        {% endfor %}
+
+    </div>
+    {% if perms.catalog.can_mark_returned %}
+        <a href="{% url 'author_update' author.pk %}">
+            <button class="btn-primary"> Update author</button>
+        </a>
+        <a href="{% url 'author_delete' author.pk %}">
+            <button class="btn-danger"> Delete author</button>
+        </a>
+    {% endif %}
 {% endblock %}
