--- a/catalog/templates/catalog/author_list.html
+++ b/catalog/templates/catalog/author_list.html
@@ -16,4 +16,7 @@
     {% else %}
         <p>There are no authors in the library.</p>
     {% endif %}
+    {% if perms.catalog.can_mark_returned%}
+        <a href="{% url 'author_create' %}"> <button class="btn-primary"> Create new author </button> </a>
+    {% endif %}
 {% endblock %}
