--- a/catalog/templates/catalog/book_detail.html
+++ b/catalog/templates/catalog/book_detail.html
@@ -20,4 +20,9 @@
     <p class="text-muted"><strong>Id:</strong> {{copy.id}}</p>
     {% endfor %}
   </div>
+
+    {% if perms.catalog.can_mark_returned %}
+        <a href="{% url 'book_update' book.pk %}"> <button class="btn-primary"> Update book </button></a>
+        <a href="{% url 'book_delete' book.pk %}"> <button class="btn-danger"> Delete book </button></a>
+    {% endif %}
 {% endblock %}
