--- a/catalog/templates/catalog/book_list.html
+++ b/catalog/templates/catalog/book_list.html
@@ -16,4 +16,7 @@
     {% else %}
         <p>There are no books in the library.</p>
     {% endif %}
+    {% if perms.catalog.can_mark_returned %}
+        <a href="{% url 'book_create' %}"> <button class="btn-primary"> Create new book </button></a>
+    {% endif %}
 {% endblock %}
