--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base_generic.html" %}
 
-</body>
-</html>
+{% block title %}Create an account{% endblock %}
+
+{% block content %}
+    <h1>Create an account</h1>
+    <p>Please, sign up using the following form:</p>
+    <form action="." method="post">
+     {% csrf_token %}
+        {{ user_form.as_p }}
+        <p><input type="submit" value="Create my account"></p>
+    </form>
+{% endblock %}
